--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
     <string name="sign_up">SIGN UP</string>
+    <string name="login">LOGIN</string>
     <string name="email">Email</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
