--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">family_share_extension</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_profile">Profile</string>
+    <string name="title_groups">Groups</string>
+    <string name="title_chats">Chats</string>
     <string name="sign_up">SIGN UP</string>
     <string name="login">LOGIN</string>
     <string name="email">Email</string>
