--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="title_profile">Profile</string>
     <string name="title_groups">Groups</string>
     <string name="title_chats">Chats</string>
-    <string name="sign_up">SIGN UP</string>
+    <string name="register">REGISTER</string>
     <string name="login">LOGIN</string>
     <string name="email">Email</string>
     <string name="username">Username</string>
@@ -11,7 +11,4 @@
     <string name="confirm_password">Confirm Password</string>
     <string name="text_here">Text Here</string>
     <string name="send">SEND</string>
-    <string name="username_reciver">Username Reciver</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
