group search implementation and group creation started

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="name">Name</string>
     <string name="surname">Surname</string>
     <string name="birthdate">BirthDate</string>
+    <string name="search_here">Search here</string>
 </resources>
